--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,6 +1,10 @@
 <% @songs.each do |song| %>
-<%= song.title %><br>
-<%= song.release_year %><br>
-<%= song.artist_name %><br>
-<%= song.genre %>
+<tbody>
+<tr>
+Title: <%= song.title %><br>
+Release Year: <%= song.release_year %><br>
+Artist Name: <%= song.artist_name %><br>
+Genre: <%= song.genre %>
+</tr>
 <% end %>
+</tbody>
