--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 
     <%= f.text_field :title %>
-    <%= f.text_field :released %>
+    <%= f.check_box :released %>
     <%= f.text_field :release_year %>
     <%= f.text_field :artist_name %>
     <%= f.text_field :genre %>
