--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,7 @@
+
 <!DOCTYPE html>
 <html>
+<%= javascript_include_tag "application" %>
 <head>
   <title>CrudWithValidationsLab</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
